# qmlgstdemo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  buildgstreamer.bat  buildvars.bat  gstreamer-build-log.txt
cmake/: FindGObject.cmake  FindGStreamer.cmake
src/bad/: CMakeLists.txt  Main.cpp  Video.qml
src/good/: CMakeLists.txt  Main.cpp  Video.qml
